--- a/Task3.vcxproj.filters
+++ b/Task3.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="myFunc.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="FiguraExeption.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Figura.h">
@@ -84,6 +87,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="myFunc.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="FiguraExeption.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
